force-app/main/default/objects/Inventory__c.object
<CustomObject>
    <fields>
        <fullName>Date__c</fullName>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Event_Details__c</fullName>
        <label>Event Details</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Item_Name__c</fullName>
        <label>Item Name</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Price__c</fullName>
        <label>Price</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Qty_In__c</fullName>
        <label>Qty In</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>DateTime</type>
    </fields>
    <label>Inventory</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Item_Name__c</columns>
        <columns>Qty_In__c</columns>
        <columns>Price__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>P-{000}</displayFormat>
        <label>Product Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Inventory</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>